Overflow Issue, not fixed yet

--- a/CCS/mobile.css
+++ b/CCS/mobile.css
@@ -21,10 +21,16 @@ body {
 }
 
 main {
+    width: 100%;
     display: grid;
     grid-template-rows: repeat(auto-fill, minmax(100vh, 1fr));
     height: 100%;
 }
+
+main section {
+    padding-block-start: 20px;
+}
+
 .myInfo {
     display: grid;
     height: 100vh;
@@ -33,7 +39,7 @@ main {
 
 .photo {
     background-image: url("../Images/profile_photo.jpg");
-    background-size: 300px 300px;
+    background-size: 50% 80%;
     background-repeat: no-repeat;
     background-position-y: center;
     background-position-x: center;
@@ -89,6 +95,33 @@ main {
 }
 
 .intro p {
-    width: 90%;
+    width: 90vh;
     color: var(--darkGray);
+}
+
+.mySkills {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(auto-fill, minmax(50px, 1fr));
+}
+
+.mySkills p {
+    font-size: 3.5rem;
+    justify-self: center;
+    color: var(--softGray);
+}
+
+.mySkills p:first-child {
+    font-size: 4rem;
+    color: var(--darkTur);
+    justify-self: end;
+    padding-inline-end: 20px;
+}
+
+.mySkills p:nth-child(2) {
+    font-size: 4rem;
+    color: var(--darkTur);
+    justify-self: start;
+    padding-inline-start: 20px;
 }
